Getting audio working on k8s

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -39,9 +39,13 @@ spec:
         volumeMounts:
         - name: awsconfig
           mountPath: /home/nonroot/.aws
+        - name: scratch
+          mountPath: /buddy/temp
       restartPolicy: Always
       volumes:
       - name: awsconfig
         secret:
           secretName: buddy-secrets
           optional: false
+      - name: scratch
+        emptyDir: {}
