--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,5 +1,4 @@
 ---
-# certificate for kubebox.dev.doc.network
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
@@ -11,7 +10,7 @@ spec:
     name: letsencrypt-docnetwork
     kind: ClusterIssuer
   dnsNames:
-  - buddy.m3test.doc.network
+  - buddy.hackathon.doc.network
 
 ---
 apiVersion: networking.k8s.io/v1
@@ -19,19 +18,17 @@ kind: Ingress
 metadata:
   name: buddy
   annotations:
-    external-dns.aplpha.kubernetes.io/hostname: buddy.m3test.doc.network
-    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    external-dns.aplpha.kubernetes.io/hostname: buddy.hackathon.doc.network
   namespace: m3test
 
 spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - buddy.m3test.doc.network
+    - buddy.hackathon.doc.network
     secretName: buddy-certificate
   rules:
-  - host: buddy.m3test.doc.network
+  - host: buddy.hackathon.doc.network
     http:
       paths:
       - path: /
